# telegram-export-insights

./: .gitignore  LICENSE  app.py  pyproject.toml  requirements.txt
src/: converter.py  models.py  parser.py
